@@ -1,6 +1,7 @@
 2.4.1 -> 2.4.2:
 	- completely rewrote queryformat code
 	- added fsnames, fssizes virtual query tags
+	- added rpmdbFindByHeader() and rpmdbFindByTag() public functions
 
 2.4 -> 2.4.1:
 	- take advantage of lchown() if it's available
